descrição do commit

--- a/index.html
+++ b/index.html
@@ -151,6 +151,51 @@
 										</div>
 
 									</article>
+									<article class="resume-timeline-item position-relative pb-5">
+
+										<div class="resume-timeline-item-header mb-2">
+											<div class="d-flex flex-column flex-md-row">
+												<h3 class="resume-position-title font-weight-bold mb-1">QA (Quality Assurance)
+												</h3>
+											</div>
+										</div>
+										<div class="resume-timeline-item-desc">
+											<p>Estabelece padrões, diretrizes e melhores práticas para garantir
+											que os produtos ou serviços atendam aos requisitos de qualidade. Profissionais da área utilizam de Ferramentas 
+											automoção e teste, além de desenvolver habilidades em metodológias agéis.
+											</p>
+											</p>
+											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
+												Soft Skills exigidas para essa carreira:
+											</h4>
+											<ul>
+												<li>Comunicação efetiva</li>
+												<li>Trabalho em equipe</li>
+												<li>Pensamento analítico</li>
+												<li>Atenção aos detalhes.</li>
+												<li>Empatia</li>
+											</ul>
+											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
+												Roadmap de Aprendizado:</h4>
+											</h4>
+											<ul class="list-inline">
+												<li class="list-inline-item">
+													<span class="badge bg-secondary badge-pill">Angular</span>
+												</li>
+												<li class="list-inline-item"><span
+														class="badge bg-secondary badge-pill">JavaScript</span></li>
+												<li class="list-inline-item"><span
+														class="badge bg-secondary badge-pill">HTML/CSS/SASS</span></li>
+												<li class="list-inline-item"><span
+														class="badge bg-secondary badge-pill">react</span></li>
+												<li class="list-inline-item"><span
+														class="badge bg-secondary badge-pill">Java</span></li>
+												<li class="list-inline-item"><span
+														class="badge bg-secondary badge-pill">SQL</span></li>
+											</ul>
+										</div>
+
+									</article>
 
 									<article class="resume-timeline-item position-relative pb-5">
 
@@ -163,7 +208,7 @@
 										<div class="resume-timeline-item-desc">
 											<p>Um desenvolvedor de interface concentra-se na criação da aparência visual dos aplicativos e sites. 
 												Eles trabalham com designers para implementar layouts, escolher cores, fontes e elementos gráficos. 
-												Sempre, utilizando do aprendizado contínuo</p>
+												Sempre, utilizando do aprendizado contínuo.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Soft Skills exigidas para essa carreira:
 											</h4>
@@ -199,7 +244,7 @@
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
 												<h3 class="resume-position-title font-weight-bold mb-1">
-													desenvolvedor Front-end plenor
+													Desenvolvedor Front-end pleno
 												</h3>
 											</div>
 										</div>
