--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
 												<li class="list-inline-item">
 													<span class="badge bg-secondary badge-pill">Angular</span>
 												</li>
+												<li class="list-inline-item">
+													<span class="badge bg-secondary badge-pill">Selenium</span>
+												</li>
 												<li class="list-inline-item"><span
 														class="badge bg-secondary badge-pill">JavaScript</span></li>
 												<li class="list-inline-item"><span
@@ -215,6 +218,7 @@
 											<ul>
 												<li>Comunicação</li>
 												<li>Pensamento análitico<li>
+												<li>Olhar Crítico</li>
 												<li>Criatividade</li>
 												<li>Apredizado contínuo</li>
 											</ul>
@@ -284,7 +288,7 @@
 										<div class="resume-timeline-item-header mb-2">
 											<div class="d-flex flex-column flex-md-row">
 												<h3 class="resume-position-title font-weight-bold mb-1">
-													Desenvolvedor Front-end Freelancer:</h3>
+													CEO</h3>
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
@@ -299,7 +303,8 @@
 												<li>Organização</li>
 												<li>Ética</li>
 												<li>Comprometimento</li>
-												<li>inteligência emocional</li>
+												<li>Inteligência emocional</li>
+												<li>Olhar critico</li>
 											</ul>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Roadmap de Aprendizado:</h4>
@@ -316,6 +321,10 @@
 														class="badge bg-secondary badge-pill">HTML/CSS/SASS/LESS</span></li>
 												<li class="list-inline-item"><span
 														class="badge bg-secondary badge-pill">Back-end</span></li>
+												<li class="list-inline-item"><span
+														class="badge bg-secondary badge-pill">Photoshop</span></li>
+												<li class="list-inline-item"><span
+														class="badge bg-secondary badge-pill">Ilustrator</span></li>
 											</ul>
 										</div>
 
