--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 											</h4>
 											<ul>
 												<li>Comunicação</li>
-												<li>Pensamento análitico<li>
+												<li>Pensamento análitico</li>
 												<li>Olhar Crítico</li>
 												<li>Criatividade</li>
 												<li>Apredizado contínuo</li>
@@ -356,7 +356,7 @@
 											<div class="resume-skill-name">React</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 10%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 23%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -364,7 +364,7 @@
 											<div class="resume-skill-name">JavaScript</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 15%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 30%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -373,7 +373,7 @@
 											<div class="resume-skill-name">Node.js</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 3%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 10%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -381,7 +381,7 @@
 											<div class="resume-skill-name">HTML/CSS/SASS/LESS</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 45%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -392,10 +392,10 @@
 									<h4 class="resume-skills-cat font-weight-bold">Backend</h4>
 									<ul class="list-unstyled">
 										<li class="mb-2">
-											<div class="resume-skill-name">Python/Django</div>
+											<div class="resume-skill-name">Python</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 1%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 10%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -403,7 +403,7 @@
 											<div class="resume-skill-name">Ruby/Rails</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 1%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 10%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -411,7 +411,7 @@
 											<div class="resume-skill-name">PHP</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 2%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 10%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
@@ -419,7 +419,15 @@
 											<div class="resume-skill-name">WordPress/Shopify</div>
 											<div class="progress resume-progress">
 												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
-													style="width: 0%" aria-valuenow="25" aria-valuemin="0"
+													style="width: 10%" aria-valuenow="25" aria-valuemin="0"
+													aria-valuemax="100"></div>
+											</div>
+										</li>
+										<li class="mb-2">
+											<div class="resume-skill-name">C#</div>
+											<div class="progress resume-progress">
+												<div class="progress-bar theme-progress-bar-dark" role="progressbar"
+													style="width: 10%" aria-valuenow="25" aria-valuemin="0"
 													aria-valuemax="100"></div>
 											</div>
 										</li>
